cmake_minimum_required(VERSION 3.15)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_CXX_STANDARD_REQUIRED True)

add_library(compiler_flags INTERFACE)
target_compile_features(compiler_flags INTERFACE cxx_std_11)

# add compiler warning flags just when building this project via
# the BUILD_INTERFACE genex
set(gcc_like_cxx "$<COMPILE_LANG_AND_ID:CXX,ARMClang,AppleClang,Clang,GNU,LCC>")
set(msvc_cxx "$<COMPILE_LANG_AND_ID:CXX,MSVC>")
target_compile_options(compiler_flags INTERFACE
  "$<${gcc_like_cxx}:$<BUILD_INTERFACE:-Wall;-Wextra;-Wshadow;-Wformat=2;-Wunused>>"
  "$<${msvc_cxx}:$<BUILD_INTERFACE:-W3>>"
)

set(MPOKER_PROJECT_NAME 
    MPoker)

set(MPOKER_SOURCE_DIR 
    src)

set(MPOKER_SOURCE
    ${MPOKER_SOURCE_DIR}/main.cpp)

set(MPOKER_LIBRARIES_DIR
    libs)

set(MPOKER_LIBRARIES
    Poker)

project(${MPOKER_PROJECT_NAME})

add_executable(${MPOKER_PROJECT_NAME} ${MPOKER_SOURCE})

foreach(LIBRARY ${MPOKER_LIBRARIES})
    add_subdirectory("${MPOKER_LIBRARIES_DIR}/${LIBRARY}")
endforeach(LIBRARY)
target_link_libraries(${MPOKER_PROJECT_NAME} ${MPOKER_LIBRARIES})

